--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
     "@fortawesome/fontawesome-free": "5.9.0",
-    "bootstrap": "4.3.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "bootstrap": "^4.3.1",
     "jquery": "3.4.1",
     "jquery.easing": "^1.4.1",
-    "magnific-popup": "^1.1.0"
+    "magnific-popup": "^1.1.0",
+    "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1",
+    "react-svg": "^10.0.9"
   },
   "devDependencies": {
     "browser-sync": "2.26.7",
